压缩图片大小，内容调整

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keyword" content="不愉的云端小屋，不愉,不愉快,非常不愉快,不是不余,云端小屋" />
+        <meta name="keyword" content="不是不余，不愉的云端小屋，不愉,不愉快,非常不愉快,云端小屋" />
         <meta name="description" content="云端小屋，个人Blog" />
         
         <title>不愉的云端小屋</title>
@@ -23,8 +23,8 @@
         <div id="right">
             <ul>
                 <li><a href="https://www.yuque.com/fcbyk" target="_blank">语雀笔记</a></li>
-                <li><a href="https://github.com/Bykit" target="_blank">GitHub</a></li>
-                <li><a id="databases" href = "http://fcbyk.com:5000">数据库课程设计</a></li>
+                <li><a href="https://github.com/fcbyk" target="_blank">GitHub</a></li>
+                <!-- <li><a id="databases" href = "http://fcbyk.com:5000">数据库课程设计</a></li> -->
             </ul>
         </div>
     </nav>
