更新小屋文档链接

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <label for="nav-check">&#9776</label>
         <div id="right">
             <ul>
-                <li><a href="https://www.yuque.com/fcbyk" target="_blank">语雀笔记</a></li>
+                <li><a href="https://fcbyk.com/docs">小屋文档</a></li>
                 <li><a href="https://github.com/fcbyk" target="_blank">GitHub</a></li>
                 <!-- <li><a id="databases" href = "http://fcbyk.com:5000">数据库课程设计</a></li> -->
             </ul>
