--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
             </div>
         </div>
 
+        <div class="hexo">
+            <div class="hexologo">
+                <img src="https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg" alt="">
+                <p>hexo博客</p>
+            </div>
+            <p class="hexotext">不常用，hexo框架搭建的博客，用于md文档预览，比如说一些视频资料的md文档，就会放在这里</p>
+            <div class="hexogo">
+                <a href="https://hexo.fcbyk.com/"><div>前往</div></a>
+            </div>
+        </div>
+
     </div>
 
     <div class="painting">
