更改小屋文档链接

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <p>与本站点相关的内容会写在这里</p>
                         <p>点右边翻开 -></p>
                     </div>
-                    <a href="https://fcbyk.com/docs"><div class="opendocs"></div></a>
+                    <a href="https://docs.fcbyk.com"><div class="opendocs"></div></a>
                 </div>
             </div>
             <div class="box2-2">
