更改链接和调整动画

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="footer" >
-        <a href="https://fcbyk.com/docs/%E5%90%8D%E5%AD%97%E7%94%B1%E6%9D%A5.html" target="_blank">
+        <a href="https://docs.fcbyk.com/" target="_blank">
             <p>by 非常不愉快 &nbsp;</p>
         </a>
         <a href="https://beian.miit.gov.cn/" target="_blank">
