--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <path d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9 23.5 23.2 38.1 55.4 38.1 91v112.5c0.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z" p-id="2790" fill="#ffffff"></path>
                     </svg>
                     <p class="title">GitHub</p>
-                    <div>
-                        <p>我的代码远程仓库,网络经常连不上~</p>
-                        <p><a href="https://github.com/fcbyk" target="_blank">点击进入</a></p>
+                    <div class="detail">
+                        <p class="description">我的代码远程仓库,网络经常连不上~</p>
+                        <a href="https://github.com/fcbyk" target="_blank"><p class="goto">点击进入</p></a>
                     </div>
                 </div>
             </div>
@@ -44,25 +44,26 @@
         <div class="box2">
             <div class="box2-1">
                 <div class="docs">
-                    <div class="docslogo">
-                        <div>
-                            <svg t="1680797850230" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="26632" width="200" height="200">
-                                <path d="M891.2896 0c12.5952 0 18.944 6.3488 18.944 18.944l0 910.2336c0 12.6976-6.3488 18.944-18.944 18.944S872.3456 941.8752 872.3456 929.1776L872.3456 37.888 75.8784 37.888c-25.2928 0-37.888 12.6976-37.888 37.888l777.5232 0c12.5952 0 18.944 6.3488 18.944 18.944l0 910.2336C834.3552 1017.7536 828.0064 1024 815.4112 1024L75.8784 1024c-22.1184 0-40.2432-7.168-54.4768-21.2992C7.0656 988.4672 0 970.3424 0 948.1216L0 75.8784c0-22.1184 7.0656-40.3456 21.2992-54.4768C35.5328 7.0656 53.76 0 75.8784 0L891.2896 0zM37.888 113.7664l0 834.3552c0 25.2928 12.5952 37.888 37.888 37.888l720.5888 0L796.3648 113.7664 720.5888 113.7664l0 474.112c0 7.9872-3.9936 13.4144-11.8784 16.5888C707.1744 606.0032 704.8192 606.8224 701.6448 606.8224c-3.1744 0-7.8848-1.536-14.2336-4.7104L625.7664 538.112 564.1216 602.112C556.2368 608.3584 549.1712 609.1776 542.8224 604.4672 534.9376 601.2928 530.944 595.7632 530.944 587.8784l0-474.112L37.888 113.7664zM568.9344 542.8224l42.7008-45.056c9.5232-9.5232 18.944-9.5232 28.4672 0l42.7008 45.056 0-429.056L568.9344 113.7664 568.9344 542.8224z" p-id="26633"></path>
-                            </svg>
-                            <p>小屋文档</p>
+                    <div>
+                        <svg t="1680797850230" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="26632" width="200" height="200">
+                            <path d="M891.2896 0c12.5952 0 18.944 6.3488 18.944 18.944l0 910.2336c0 12.6976-6.3488 18.944-18.944 18.944S872.3456 941.8752 872.3456 929.1776L872.3456 37.888 75.8784 37.888c-25.2928 0-37.888 12.6976-37.888 37.888l777.5232 0c12.5952 0 18.944 6.3488 18.944 18.944l0 910.2336C834.3552 1017.7536 828.0064 1024 815.4112 1024L75.8784 1024c-22.1184 0-40.2432-7.168-54.4768-21.2992C7.0656 988.4672 0 970.3424 0 948.1216L0 75.8784c0-22.1184 7.0656-40.3456 21.2992-54.4768C35.5328 7.0656 53.76 0 75.8784 0L891.2896 0zM37.888 113.7664l0 834.3552c0 25.2928 12.5952 37.888 37.888 37.888l720.5888 0L796.3648 113.7664 720.5888 113.7664l0 474.112c0 7.9872-3.9936 13.4144-11.8784 16.5888C707.1744 606.0032 704.8192 606.8224 701.6448 606.8224c-3.1744 0-7.8848-1.536-14.2336-4.7104L625.7664 538.112 564.1216 602.112C556.2368 608.3584 549.1712 609.1776 542.8224 604.4672 534.9376 601.2928 530.944 595.7632 530.944 587.8784l0-474.112L37.888 113.7664zM568.9344 542.8224l42.7008-45.056c9.5232-9.5232 18.944-9.5232 28.4672 0l42.7008 45.056 0-429.056L568.9344 113.7664 568.9344 542.8224z" p-id="26633"></path>
+                        </svg>
+                        <p class="title">小屋文档</p>
+                        <div class="detail">
+                            <p class="description">与本站点相关的内容会写在这里</p>
+                            <a href="https://docs.fcbyk.com"><p>点击翻开 -></p></a>
                         </div>
-                        <p>与本站点相关的内容会写在这里</p>
-                        <p>点右边翻开 -></p>
                     </div>
-                    <a href="https://docs.fcbyk.com"><div class="opendocs"></div></a>
                 </div>
             </div>
             <div class="box2-2">
                 <div class="yuque">
                     <div>
-                        <div><img src="https://mdn.alipayobjects.com/huamei_0prmtq/afts/img/A*IVdnTJqUp6gAAAAAAAAAAAAADvuFAQ/original"></div>
-                        <p class="yuquetext">一些计科相关的笔记，语雀画板功能挺好用的，可以写思维导图，非会员无法进行网络分享，所以仅我自己可见</p>
-                        <a href="https://www.yuque.com/fcbyk"><p>点击传送</p></a>
+                        <div><img src="https://mdn.alipayobjects.com/huamei_0prmtq/afts/img/A*IVdnTJqUp6gAAAAAAAAAAAAADvuFAQ/original" class="icon"></div>
+                        <div class="detail">
+                            <p class="description">一些计科相关的笔记，语雀画板功能挺好用的，可以写思维导图，非会员无法进行网络分享，所以仅我自己可见</p>
+                            <a href="https://www.yuque.com/fcbyk"><p class="goto">点击传送</p></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -70,13 +71,11 @@
 
         <div class="box3">
             <div class="hexo">
-                <div class="hexologo">
-                    <img src="https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg" alt="">
-                    <p>hexo博客</p>
-                </div>
-                <p class="hexotext">不常用，hexo框架搭建的博客，用于markdown文档预览，比如说一些视频资料的md文档，就会放在这里</p>
-                <div class="hexogo">
-                    <a href="https://hexo.fcbyk.com/"><div>前往</div></a>
+                <img src="https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg" class="icon">
+                <p class="title">hexo博客</p>   
+                <div class="detail">
+                    <p class="description">不常用，hexo框架搭建的博客，用于markdown文档预览，比如说一些视频资料的md文档，就会放在这里</p>
+                    <a href="https://hexo.fcbyk.com/"><p class="buttongo">前往</p></a>
                 </div>
             </div>
         </div>
